# ontologic-api

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
app/: main.py
data/: .gitkeep
docs/: PAYMENT_SETUP.md  README.md  SECURITY.md  TIMEOUT_CONFIGURATION.md  backup-system.md  openapi_spec.json
openspec/: project.md
reports/: README.md
scripts/: README.md  backup_cli.py  chat_cleanup_cli.py  chat_maintenance_cli.py  check_endpoints.py  check_exposed_endpoints.py  check_openapi_drift.sh  generate_api_docs.py  migrate_db.py  pre-commit-check.sh  setup_telemetry.py  start_with_payments.sh  test_endpoints.py
tests/: CHAT_INTEGRATION_TEST_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FINAL_100_PERCENT_ATTEMPT_REPORT.md  FINAL_TEST_VALIDATION_REPORT.md  PAYMENT_SECURITY_COMPLIANCE_SUMMARY.md  PERFORMANCE_RELIABILITY_REPORT.md  PROMPT_ENHANCEMENT_SUMMARY.md  PROMPT_IMPROVEMENT_RECOMMENDATIONS.md  README.md  SOPHIA_VALIDATOR_IMPROVEMENTS.md  TEST_MAINTENANCE_GUIDELINES.md  TEST_SUITE_MAINTENANCE_GUIDELINES.md  TEST_SUITE_VALIDATION_REPORT.md  __init__.py  analyze_prompt_performance.py  analyze_prompt_performance.py.original  comparison_report.json  comparison_report.md  conftest.py  enhance_prompts_from_docs.py  generate_comparison_report.py  live_responses.json  prompt_comparison_report.md  quick_test_enhanced.py  run_live_prompts.py  run_security_tests.py  run_tests.py  sophia_coverage_report.md  sophia_specs.json  sophia_validator.py  test_all_endpoints.py  test_ask_and_query_endpoints.py  test_ask_philosophy_prompts.py  test_auth_router.py  test_billing_service.py  test_cache_service.py  test_cache_warming.py  test_chat_api_endpoints.py  test_chat_e2e_integration.py  test_chat_history_service.py  (+43 more)
(+283 files in other folders)
