[project]
name = "ontologic-api"
version = "1.0.0"
description = "Ontologic API - Philosophy Analysis and Chat System"
requires-python = ">=3.11"

dependencies = [
    # Core API dependencies
    "alembic==1.16.5",
    "asyncpg==0.30.0",
    "authlib==1.6.4",
    "clean-text==0.6.0",
    "ecdsa==0.19.1",
    "fastapi==0.118.0",
    "ftfy==6.3.1",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    # LLM and embeddings
    "llama-index==0.14.3",
    "llama-index-embeddings-ollama==0.8.3",
    "llama-index-extractors-entity==0.4.1",
    "llama-index-llms-ollama==0.7.4",
    "ollama==0.6.0",
    "sentencepiece==0.2.1",
    "tomli==2.2.1",
    "torch==2.8.0",
    "transformers==4.56.2",
    # Observability
    "opentelemetry-api==1.28.2",
    "opentelemetry-sdk==1.28.2",
    "opentelemetry-instrumentation-fastapi==0.49b2",
    "opentelemetry-exporter-otlp==1.28.2",
    "prometheus-fastapi-instrumentator==7.0.0",
    # Document processing
    "pymupdf4llm==0.0.27",
    "python-docx==1.2.0",
    "python-multipart==0.0.20",
    # Vector database
    "qdrant-client==1.15.1",
    # Protobuf version constraint: qdrant-client requires >=3.20.0, and 6.x is incompatible with the current setup
    "protobuf>=3.20.0,<6.0",
    # Database
    "pydantic==2.11.9",
    "pydantic-settings==2.11.0",
    "slowapi==0.1.9",
    "sqlmodel==0.0.25",
    "uvicorn==0.37.0",
    # Payment processing
    "stripe>=13.0.0,<14.0",
    # Testing
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pydantic-settings>=2.11.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "redis>=6.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
